# dragon-hunters

./: .gitignore  README.md  compose.yaml  docker-compose.yml
.github/: pull_request_template.md
bot/: .dockerignore  README.md  index.ts  package-lock.json  package.json
bots/: package.json
gamebot/: Dockerfile  README.md  (+4 more)
policymaker/: .gitattributes  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
policymaker/policymaker/: __init__.py  agent.py  bot.py  bot_api_client.py  bot_api_error.py  bot_api_response_actions.py  bot_api_response_events.py  bot_api_response_jobs.py  bot_api_response_status.py  bot_observe_response.py  bot_observe_response_data.py  bot_status_response.py  bot_status_response_data.py  gpt35turbo_wrapper.py  policy_maker.py  prompt_yield_jobs.py
policymaker/policymaker/bot_apis/: action_data.py  api_error.py  client.py  event_data.py  get_actions_response.py  get_events_response.py  get_jobs_response.py  get_status_response.py  job_data.py  observation_data.py  post_actions_response.py  post_jobs_response.py  post_observe_response.py  response.py  status_data.py
policymaker/policymaker/kb/: README.zh.md  TaskTree.py  __init__.py  example.txt  knowledge_base.py  test.txt  test_knowledge_base.py
policymaker/policymaker/legacy_framework/: agent.py  bot_connection.py  connection.py  fsm.py  prompt.py  tools.py
policymaker/policymaker/models/: model_wrapper.py
policymaker/policymaker/prompts/: prompt.py  prompt_yield_jobs.py
policymakers/: pyproject.toml
policymakers/dragon_hunters/: __init__.py  dragon_hunters.py
(+78 files in other folders)
