[tool.poetry]
name = "dragon-hunters"
version = "0.0.0"
description = ""
authors = ["Futrime <futrime@outlook.com>"]
readme = "README.md"
packages = [{include = "dragon_hunters"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
